<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>homeplus_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt configuration for HomePlus robot</description>
  <maintainer email="yl3498@cornell.edu">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>homeplus_urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
